Prevent analysis deps table to push the content width too wide.

--- a/static/v2/css/style.css
+++ b/static/v2/css/style.css
@@ -94,6 +94,10 @@ pre > code {
     width: auto;
 }
 
+.overflow-x {
+  overflow-x: auto;
+}
+
 /******************************************************
   site header
 ******************************************************/
